src/test/deca/codegen/valid/conditions/whileIfThenElse.deca
// Description :
//    Test de if/else et while en même temps
//
// Resultats :
//    4321

{
    int i = 4;
    while (i > 0) {
        if (i == 2) {
            print("2");
        } else if (i == 3) {
            print("3");
        } else if (i == 4) {
            print("4");
        } else {
            println("1");
        }
        i = i - 1;
    }
}
