src/test/deca/codegen/invalid/errors/divisionBy0.deca
// Description :
//    Test de la division par 0
//
// Resultats :
//    Error: Division by 0

{
    println(1 / 0);
}